# IntroductionToPlanetaryScience

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agents/: content-reviewer.md  cross-ref-validator.md  science-fact-checker.md
.claude/skills/build-book/: SKILL.md
.claude/skills/build-check/: SKILL.md
.claude/skills/new-chapter/: SKILL.md
.claude/skills/verify-references/: SKILL.md
.github/workflows/: book.yml
book/: _config.yml  _toc.yml  intro.md  references.bib
book/01_introduction/: introduction.md
book/02_formation_orbits/: formation_orbits.md
book/03_heat_energy/: heat_energy.md
book/03_heat_energy/figures/: enceladus_plumes.avif  io_tvashtar_plume.avif
book/04_differentiation_magnetospheres/: differentiation_magnetospheres.md
book/04_differentiation_magnetospheres/figures/: aurora.avif  mars_crustal_magnetism.avif
book/05_atmospheres_1/: atmospheres_1.md
book/06_atmospheres_2/: atmospheres_2.md
book/07_surfaces/: surfaces.md
book/08_interiors/: interiors.md
book/09_earth_venus/: earth_venus.md
book/10_mercury_mars/: mercury_mars.md
book/11_gas_ice_giants/: gas_ice_giants.md
book/12_small_bodies/: small_bodies.md
book/13_exoplanets/: exoplanets.md
book/14_synthesis/: synthesis.md
book/_static/: custom.css
planning/: content.md  course_development.md
slides/: .gitignore  Makefile
slides/common/: beamerthemeIPS.sty  break_background.avif  macros.tex
slides/lecture01/: lecture01.tex
src/ips_styles/: __init__.py  chicago.py
(+60 files in other folders)
