[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "introduction-to-planetary-science"
version = "2026.0"
description = "Lecture notes for Introduction to Planetary Science (WBAS002-05), Kapteyn Institute"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book<2",
    "sphinx-proof",
]

[tool.hatch.build.targets.wheel]
packages = []
