[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "introduction-to-planetary-science"
version = "2026.0"
description = "Lecture notes for Introduction to Planetary Science (WBAS002-05), Kapteyn Institute"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book<2",
    "sphinx-proof",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."pybtex.style.formatting"]
chicago = "ips_styles.chicago:Style"
